# suggestedimages

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
suggestedimages/: __init__.py  constants.py  routes.py  util.py
suggestedimages/external_apis/: README.md  __init__.py  base.py  finto.py  language_api_mapping.py  yso.py
suggestedimages/locales/: __init__.py  cldr_names.py  fi.py  language_name_db.py  locale.py
suggestedimages/locales/locales/: es.py  fi.py  simple.py
suggestedimages/localization/: language_name_db.py  list_of_wiktionaries.py  locale.py
suggestedimages/localization/locales/: fi.py  simple.py
suggestedimages/search/: __init__.py  colors.py  lexemes.py  q_items.py  result.py  result_ranking.py  structured_data.py  wikidata.py
suggestedimages/search/queries/: queries.py
suggestedimages/static/: imagebox.js  index.js  style.css
suggestedimages/templates/: help.html  index.html  layout.html  more-images.html
suggestedimages/wikidata/: __init__.py  api.py  lexemes.py  result.py  result_ranking.py
suggestedimages/wikidata/queries/: __init__.py  queries.py  util.py
tests/: conftest.py  test_app.py  test_locales.py  test_search.py  test_util.py  test_wikidata.py
tests/search/: test_q_items.py  test_wikidata.py
tests/search/queries/: test_util.py
tests/wd/: test_util.py
tests/wikidata/: test_api.py  test_queries.py
tests/wikidata/queries/: test_util.py
tools/: example-gadget.js  image_subprops.py
wd/: __init__.py  api.py  old.py  queries.py  result.py  util.py
wd/locales/: __init__.py  fi.py
