[project]
name = "suggestedimages"
version = "1.0.0"
description = "Article image proposing utility for wiktionaries"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["suggestedimages"]
